--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
                                     <div class="col py-2">
                                         <div class="card shadow rounded">
                                             <div class="card-body shadow rounded">
-                                                <div class="float-end">Proficient</div>
+                                                <div class="float-end">Professional</div>
                                                 <h5>English</h5>
                                                 <h6 class="card-text"><em></em></h6>
                                                 <h6 class="card-text"></h6>
@@ -1528,31 +1528,31 @@
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Listening 6.5</h6>
+                                                                <h6>Listening 8.0</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Reading 7.0</h6>
+                                                                <h6>Reading 8.0</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Writing 6.0</h6>
+                                                                <h6>Writing 7.5</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Speaking 6.0</h6>
+                                                                <h6>Speaking 8.5</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Overall: 6.5</h6>
+                                                                <h6>Overall: 8.0</h6>
                                                             </div>
                                                         </div>
                                                     </div>
