Changed Associate Professor Name

--- a/index.html
+++ b/index.html
@@ -1866,7 +1866,7 @@
                                             <div class="card-body shadow rounded">
                                                 <div class="float-end"></div>
 
-                                                <h5>Dr. Hafeez Anwar</h5>
+                                                <h5>Dr. Fiaz Ahmad</h5>
                                                 <h6 class="card-text"><em>Associate Professor</em></h6>
                                                 <h6 class="card-text">Department of Electrical and Computer Engineering</h6>
                                                 <h6 class="card-text">Air University Islamabad, Main Campus, Pakistan</h6>
