Undo Changes Languages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Portfolio/Resume">
-    <meta name="author" content="Muhammad Usama">
+    <meta name="author" content="Hamid Habib Syed">
     <link rel="shortcut icon" href="images/imgterminal.svg">
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet'
@@ -205,16 +205,16 @@
                                                     href="mailto:HamidSyed298@gmail.com"><img src="images/gmail.svg"
                                                         height="30" width="30" /></a>
                                             </li>
-                                            <!-- <li style="display:inline-block;"><a
-                                                    href="https://facebook.com/bilalibniqbal/"><img
+                                            <li style="display:inline-block;"><a
+                                                    href="https://facebook.com/hamid.habibsyed?mibextid=ZbWKwL/"><img
                                                         src="images/facebook.svg" height="30" width="30" /></a>
-                                            </li> -->
+                                            </li>
 
 
-                                            <!-- <li style="display:inline-block;"><a
-                                                    href="https://twitter.com/bilalibniqbal"><img
+                                            <li style="display:inline-block;"><a
+                                                    href="https://twitter.com/Hamid_Habib298?t=kDjvhATj7EcJfZEGI8X85w&s=09"><img
                                                         src="images/twitter.svg" height="30" width="30" /></a>
-                                            </li> -->
+                                            </li>
                                             <li style="display:inline-block;"><a
                                                     href="https://www.linkedin.com/in/hamid-habib-syed-74004815a/"><img
                                                         src="images/linkedin.svg" height="30" width="30" /></a>
@@ -1528,31 +1528,31 @@
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Listening 8.0</h6>
+                                                                <h6>Listening 6.5</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Reading 8.0</h6>
+                                                                <h6>Reading 7.0</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Writing 7.5</h6>
+                                                                <h6>Writing 6.0</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Speaking 8.5</h6>
+                                                                <h6>Speaking 6.0</h6>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-2">
                                                             <div class="section section-inner rounded shadow"
                                                                 style="margin-bottom: 0; padding: 5pt;">
-                                                                <h6>Overall: 8.0</h6>
+                                                                <h6>Overall: 6.5</h6>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1939,20 +1939,20 @@
                                         <a href="https://github.com/HamidSyed298">GitHub: @HamidSyed298</a>
                                     </div>
 
-                                    <!-- <div class="colorlib-feature colorlib-feature-sm animate-box wow fadeInUp"
+                                    <div class="colorlib-feature colorlib-feature-sm animate-box wow fadeInUp"
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/facebook.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://facebook.com/bilalibniqbal/">Facebook: @bilalibniqbal</a>
-                                </div> -->
+                                    <a href="https://facebook.com/hamid.habibsyed?mibextid=ZbWKwL/">Facebook: @hamid.habibsyed</a>
+                                    </div>
 
                                     <!-- <div class="colorlib-feature colorlib-feature-sm animate-box wow fadeInUp"
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/researchgate.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://www.researchgate.net/profile/Muhammad-Bilal-287">ResearchGate:
-                                        @Muhammad-Bilal-287</a>
-                                </div> -->
+                                    <a href="https://www.researchgate.net/profile/HamidSyed-298">ResearchGate:
+                                        @Hamid-Syed-298</a>
+                                    </div> -->
 
 
 
@@ -1960,7 +1960,7 @@
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <i class="fas fa-brands fa-orcid fa-3x icon"></i>
                                     <a href="https://orcid.org/0000-0002-8493-7903">Orcid: @0000-0002-8493-7903</a>
-                                </div> -->
+                                    </div> -->
 
 
 
@@ -1983,14 +1983,14 @@
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/twitter.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://twitter.com/bilalibniqbal">Twitter: @twitter-username-here</a>
+                                    <a href="https://twitter.com/Hamid_Habib298">Twitter: @twitter-username-here</a>
                                 </div> -->
 
                                     <!-- <div class="colorlib-feature colorlib-feature-sm animate-box wow fadeInUp"
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/scholar.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://scholar.google.com/citations?user=_nrA0DcAAAAJ">Google
+                                    <a href="Link">Google
                                         Scholar</a>
                                 </div> -->
 
@@ -1998,7 +1998,7 @@
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/arxiv.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://arxiv.org/a/0000-0002-8493-7903">arXiv:
+                                    <a href="Link">arXiv:
                                         @0000-0002-8493-7903</a>
                                 </div> -->
 
