--- a/index.html
+++ b/index.html
@@ -1950,8 +1950,8 @@
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <object class="filter-color" data="images/researchgate.svg" width="30" height="30">
                                     </object>
-                                    <a href="https://www.researchgate.net/profile/HamidSyed-298">ResearchGate:
-                                        @Hamid-Syed-298</a>
+                                    <a href="https://www.researchgate.net/profile/Hamid-Syed">ResearchGate:
+                                        @Hamid-Syed</a>
                                     </div> -->
 
 
@@ -1959,7 +1959,7 @@
                                     <!-- <div class="colorlib-feature colorlib-feature-sm animate-box wow fadeInUp"
                                     data-wow-delay="0.1s" data-animate-effect="fadeInLeft">
                                     <i class="fas fa-brands fa-orcid fa-3x icon"></i>
-                                    <a href="https://orcid.org/0000-0002-8493-7903">Orcid: @0000-0002-8493-7903</a>
+                                    <a href="Link">Orcid: @0000-0002-8493-7903</a>
                                     </div> -->
 
 
