Pushing it Again for Viewing

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
                                                         Hands-on experience on Transfer learning and fine tuning.
                                                     </li>
                                                     <li>
-                                                        Training detector and inferencing it on video
+                                                        Training detector and inferencing it on video footage
                                                     </li>
                                                     <li>
                                                         Optimized Tracking based on detection.
