--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                                                     <li>Status: Published</li>
                                                 </ul>
                                                 <div class=" wow fadeInUp" data-wow-delay="0.1s">
-                                                    <p><a class="more-link" href="https://"><i
+                                                    <p><a class="more-link" href="https://ieeexplore.ieee.org/document/10068940"><i
                                                                 class="fas fa-external-link-alt"></i>Preprint</a> &nbsp;
                                                         <a class="more-link"
                                                             href="https:"><i
