--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                                         title="Go to top"><i class="fas fa-circle-up fa-3x"></i></button>
                                     <h2 class="heading">About Me</h2>
                                     <p><strong>Hi, I'm Hamid Habib Syed</strong></p>
-                                    <p>I am a motivated graduate student in Electrical Engineering with a keen interest in Deep Learning and Computer Vision.
-                                        I possess strong analytical skills, problem-solving expertise, and a creative, research-oriented approach.
-                                        I have successfully completed projects involving the development of robust AI models and deploying them for end-to-end applications.</p>
+                                    <p>Ph.D. candidate at Auburn University with expertise in AI, computer vision, and robotics. 
+                                        Experienced in UAV/UGV systems, digital twins, and deep learning pipelines. 
+                                        Recognized through awards such as the NASA AgAir Competition Finalist and the FFAR Fellowship, with multiple publications and conference presentations.</p>
                                     <hr />
                                     <a class="btn btn-cta-primary btn-download" href="cv/cv.pdf" target="_blank"><i
                                             class="fas fa-download"></i> Download CV</a>
