--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     <p><strong>Hi, I'm Hamid Habib Syed</strong></p>
                                     <p>Ph.D. candidate at Auburn University with expertise in AI, computer vision, and robotics. 
                                         Experienced in UAV/UGV systems, digital twins, and deep learning pipelines. 
-                                        Recognized through awards such as the NASA AgAir Competition Finalist and the FFAR Fellowship, with multiple publications and conference presentations.</p>
+                                        Recognized through awards such as the Highest Productivity Award at the International Farm Robotics Challenge, NASA AgAir Competition Finalist, and the FFAR Fellowship, with multiple publications and conference presentations.</p>
                                     <hr />
                                     <a class="btn btn-cta-primary btn-download" href="cv/cv.pdf" target="_blank"><i
                                             class="fas fa-download"></i> Download CV</a>
