--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     style="height: 22px; font-family: 'Montserrat', sans-serif; font-weight: 400; font-size: 15px;">
                                     <p class="typed-text-output d-inline-block"></p>
                                     <p>
-                                    <div class="typed-text d-none">Ph.D. Scholar, Deep Learning Researcher, Computer Vision, Machine Learning, Semi-Supervised Learning. </div>
+                                    <div class="typed-text d-none">Ph.D. Scholar, Deep Learning Researcher, Computer Vision, Robotics, Generative AI. </div>
                                     </p>
                                 </div>
                             </div>
@@ -754,10 +754,10 @@
                                                                     Computer Vision
                                                                 </li>
                                                                 <li>
-                                                                    Machine Learning
+                                                                    Robotics
                                                                 </li>
                                                                 <li>
-                                                                    Semi-Supervised Learning
+                                                                    Generative AI
                                                                 </li>
                                                                 <li>
                                                                     Applications of Deep Learning in Engineering
